# Kraken-Space-Program

./: .gitattributes  .gitignore  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  EXECUTION.md  KRAKEN_LICENSE.md  LICENSE  README.md  codecount.sh
.github/workflows/: ci.yml
bevyskill/: SKILL.md  bevy.skill  bevyskill.skill
bevyskill/references/: advanced.md  api.md  cheatsheet.md  ecosystem.md  errors.md  migration_guide.txt  rapier.md  rendering.md  ui.md
src/: main.rs
src/assets/parts/kraken_stock/: engine_spark.lua  fueltank_1.glb  fueltank_1.lua
src/physics/: mod.rs
src/rendering/: mod.rs  render_sync.rs
